--- a/day03/CTEST03.ipynb
+++ b/day03/CTEST03.ipynb
@@ -112,7 +112,7 @@
         "# 출력\n",
         "print(x, y)\n"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -161,7 +161,7 @@
         "\n",
         "print(x, y)"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -229,7 +229,7 @@
         "# 결과\n",
         "print(result)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -285,7 +285,7 @@
         "\n",
         "print(count)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -469,7 +469,7 @@
         "print(world)\n",
         "print(result)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -488,16 +488,268 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1hKEIhaoXIEL"
+      },
+      "source": [
+        "* 코딩테스트 팁\n",
+        "  * 실무에서는 값에따라 예외처리를 해야함\n",
+        "  * 코테에서는 값이 주어지므로 예외처리를 안해도 됨"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "uajb3UKfyK6V"
+        "id": "uajb3UKfyK6V",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3d4dc07c-aa2b-413a-f711-dd04dfbc5f5a"
       },
       "source": [
         "# 다시 한번 풀어보자..\n",
-        "# 이것저것 해봤으니까 다시 해보면 무언가 되지 않을까\n"
+        "# 이것저것 해봤으니까 다시 해보면 무언가 되지 않을까\n",
+        "\n",
+        "# n  m 입력\n",
+        "n, m = map(int, input().split())\n",
+        "# x, y, z 입력\n",
+        "x, y, z = map(int, input().split())\n",
+        "\n",
+        "# 간 곳을 적어놓는 지도\n",
+        "record = [[0]*n for _ in range(m)]\n",
+        "\n",
+        "# 지도 입력\n",
+        "world = [list(map(int,input().split()))[:n] for i in range(m)]\n",
+        "\n",
+        "# 북, 동, 남, 서 의 방향의 왼쪽 좌표 (0,1,2,3)\n",
+        "dx = [-1, 0, 1, 0]\n",
+        "dy = [0, 1, 0, -1]\n",
+        "\n",
+        "# 왼쪽 turn 함수\n",
+        "def turnLeft():\n",
+        "  global z\n",
+        "  z += 1\n",
+        "  if(z >= 3):\n",
+        "    z = 0\n",
+        "\n",
+        "# main\n",
+        "# 바다 or 가본곳은 1 로 표시하는것으로\n",
+        "result = 1\n",
+        "turn = 0\n",
+        "\n",
+        "while True :\n",
+        "  turnLeft()\n",
+        "  nx = x + dx[z]\n",
+        "  ny = y + dy[z]\n",
+        "  # 갈수 있는 곳\n",
+        "  if world[nx][ny] == 0 :\n",
+        "    record[x][y] = 1\n",
+        "    x = nx\n",
+        "    y = ny\n",
+        "    result += 1\n",
+        "    turn = 0\n",
+        "\n",
+        "  # 갈수없는곳(바다,가본곳 = 1)\n",
+        "  elif world[nx][ny] == 1 or record[nx][ny] == 1:\n",
+        "    turn += 1\n",
+        "\n",
+        "  # 4회회전(어디에도 갈곳이 없을 때)\n",
+        "  if turn == 4 :\n",
+        "    \n",
+        "    if nz > 3 :\n",
+        "      \n",
+        "    # 뒤에 갈고 있으면 뒤로 이동\n",
+        "    if world[nx]][ny] == 0:\n",
+        "      world[x][y] == 1\n",
+        "      x = x+dx[nz]\n",
+        "      y = y+dy[nz]\n",
+        "      result += 1\n",
+        "      turn = 0\n",
+        "\n",
+        "    # 뒤에 갈곳 없으면 break\n",
+        "    elif world[x+dx[nz]][y+dy[nz]] == 1:\n",
+        "      world[x][y] == 1\n",
+        "      break\n",
+        "  print(result)\n",
+        "\n",
+        "print(\"=result=\")\n",
+        "for i in range(m):\n",
+        "  print(world[i])\n",
+        "print(result)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5 5\n",
+            "1 1  0\n",
+            "1 1 1 1 1\n",
+            "1 0 0 0 1\n",
+            "1 0 0 0 1\n",
+            "1 0 0 0 1\n",
+            "1 1 1 1 1\n",
+            "2\n",
+            "3\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "5\n",
+            "5\n",
+            "5\n",
+            "=result=\n",
+            "[1, 1, 1, 1, 1]\n",
+            "[1, 1, 1, 0, 1]\n",
+            "[1, 0, 1, 1, 1]\n",
+            "[1, 0, 0, 0, 1]\n",
+            "[1, 1, 1, 1, 1]\n",
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "15A_Q_HPSk_G",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "77d644fe-89d3-472e-eeda-4e4a0b02f622"
+      },
+      "source": [
+        "# 다시다시 ( 성공.. )\n",
+        "\n",
+        "# n, m\n",
+        "n, m = map(int,input().split())\n",
+        "\n",
+        "# x,y,z\n",
+        "x,y,z = map(int, input().split())\n",
+        "\n",
+        "# 가본곳 표시 할 맵\n",
+        "already_places = [[0]* n for _ in range(m)]\n",
+        "\n",
+        "# 지도 만들기\n",
+        "world = [list(map(int,input().split()))[:n] for _ in range(m)]\n",
+        "\n",
+        "# 방향 (북,동,남,서) \n",
+        "# 그래프에서는  (x,y) 의 위치를 표현해서 그대로 쓰였지만\n",
+        "# 리스트.행열같은 표에서는 [x줄, y줄]을 표현해야해서 흡사 그래프에서 (y,x) 좌표와 같음\n",
+        "dx = [1, 0, -1, 0]\n",
+        "dy = [0, 1, 0, -1]\n",
+        "\n",
+        "# 왼쪽으로 보기 함수\n",
+        "def seeLeft():\n",
+        "  global z\n",
+        "  z -= 1\n",
+        "  if z < 0 :\n",
+        "    z = 3\n",
+        "\n",
+        "result = 1 # 방문한 칸의 수\n",
+        "turn_c = 0 # 회전 횟수\n",
+        "\n",
+        "# main\n",
+        "while True:\n",
+        "  seeLeft()\n",
+        "  nx = x + dx[z]\n",
+        "  ny = y + dy[z]\n",
+        "  print(nx,ny, \":\", result, turn_c)\n",
+        "  # 가보지 않았고, 육지인 곳 = 0\n",
+        "  if already_places[nx][ny] == 0 and world[nx][ny] == 0:\n",
+        "    already_places[x][y] = 1\n",
+        "    x = nx\n",
+        "    y = ny\n",
+        "    result += 1\n",
+        "    turn_c = 0\n",
+        "    continue\n",
+        "  # 가본곳 이나 바다인곳 = 1\n",
+        "  elif already_places[nx][ny] == 1 or world[nx][ny] == 1:\n",
+        "    turn_c += 1\n",
+        "  \n",
+        "  # 4방향 가본곳이라던지, 바다라면?\n",
+        "  if turn_c == 4:\n",
+        "    # 어우.. 좌표찾기 너무 힘들다\n",
+        "    # 뒤쪽방향 = 왔던 좌표 - 현재바라보는좌표(회전4회해서 방향이 돌아옴)\n",
+        "    lx = x - dx[z]\n",
+        "    ly = y - dy[z]\n",
+        "    # 뒤에 가본적 있는가?\n",
+        "    if already_places[lx][ly] == 0 :\n",
+        "      already_places[x][y] = 1\n",
+        "      x = lx\n",
+        "      y = ly\n",
+        "      break\n",
+        "    # 뒤에바다거나 가본적있은가?\n",
+        "    else :\n",
+        "      already_places[x][y] = 1\n",
+        "      break\n",
+        "\n",
+        "print(\"---WORLD---\")\n",
+        "for i in range(m):\n",
+        "  print(world[i])\n",
+        "print(\"---ROAD---\")\n",
+        "for i in range(m):\n",
+        "  print(already_places[i])\n",
+        "print(\"**RESULT**\")\n",
+        "print(result)"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5 5\n",
+            "1 1 0\n",
+            "1 1 1 1 1 \n",
+            "1 0 0 0 1\n",
+            "1 0 0 0 1\n",
+            "1 0 0 0 1\n",
+            "1 1 1 1 1\n",
+            "1 0 : 1 0\n",
+            "0 1 : 1 1\n",
+            "1 2 : 1 2\n",
+            "2 2 : 2 0\n",
+            "2 1 : 3 0\n",
+            "1 1 : 4 0\n",
+            "2 2 : 4 1\n",
+            "3 1 : 4 2\n",
+            "3 0 : 5 0\n",
+            "2 1 : 5 1\n",
+            "3 2 : 5 2\n",
+            "4 2 : 6 0\n",
+            "3 1 : 6 1\n",
+            "2 2 : 6 2\n",
+            "3 3 : 6 3\n",
+            "4 3 : 7 0\n",
+            "3 2 : 7 1\n",
+            "2 3 : 7 2\n",
+            "2 4 : 8 0\n",
+            "3 3 : 8 1\n",
+            "2 2 : 8 2\n",
+            "1 3 : 8 3\n",
+            "1 4 : 9 0\n",
+            "2 3 : 9 1\n",
+            "1 2 : 9 2\n",
+            "0 3 : 9 3\n",
+            "---WORLD---\n",
+            "[1, 1, 1, 1, 1]\n",
+            "[1, 0, 0, 0, 1]\n",
+            "[1, 0, 0, 0, 1]\n",
+            "[1, 0, 0, 0, 1]\n",
+            "[1, 1, 1, 1, 1]\n",
+            "---ROAD---\n",
+            "[0, 0, 0, 0, 0]\n",
+            "[0, 1, 1, 1, 0]\n",
+            "[0, 1, 1, 1, 0]\n",
+            "[0, 1, 1, 1, 0]\n",
+            "[0, 0, 0, 0, 0]\n",
+            "**RESULT**\n",
+            "9\n"
+          ]
+        }
+      ]
     }
   ]
 }
